--- a/websites/site1/index.html
+++ b/websites/site1/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1 style="text-align: center;">Site 1</h1>
+    <h1 style="text-align: center;">Site 1 from docker</h1>
 </body>
 
 </html>
