--- a/websites/site3/index.html
+++ b/websites/site3/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <h1 style="text-align: center;">Site3</h1>
+    <h1 style="text-align: center;">Site "" WebApp nginx | docker <mat-slider vertical min="min" max="max" step="step"
+            value="value"></mat-slider></h1>
 </body>
 
 </html>
